[package]
name = "yp"
version = "0.2.7"
edition = "2024"
description = "一个高性能的目录空间占用查看工具\nPACI mail@pa.ci"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
colored = "3.0"
terminal_size = "0.4"
unicode-width = "0.2"
rayon = "1.11"